fix large title overflow

--- a/src/sass/modules/_thumbnailGrid.scss
+++ b/src/sass/modules/_thumbnailGrid.scss
@@ -132,7 +132,7 @@ ul#grid-gallery li {
             display: block;
             top: 0;
             left: 0;
-            width: calc( 100% - 2em );
+            width: calc(100% - 2em);
             height: 100%;
             transform: translate(0, 100%);
             transition: all 0.15s ease-out;
@@ -155,7 +155,6 @@ ul#grid-gallery li {
         font-size: 1.4em;
 
         @include breakpoint(md) {
-            font-size: 2vw;
             margin-bottom: 0;
             hyphens: auto;
         }
